Realizando algumas atualizações no código para poder executar o código

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AddressConnection": "server=localhost;database=system_address;user=root;password=root"
+  },
   "CepService": {
     "BaseUrl": "https://viacep.com.br/ws/"
   }
